[DDW-167]: Consolidate Japanese translations

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -3,7 +3,7 @@
   "api.errors.CanNotCalculateTransactionFeesError": "処理中のトランザクションがあるため、手数料を計算できません。",
   "api.errors.ForbiddenMnemonicError": "ウォレットの復元フレーズが無効です。送信された復元フレーズは参照用復元フレーズ例の1つです。資金を保有しているウォレットには使用できません。",
   "api.errors.GenericApiError": "エラーが発生しました。",
-  "api.errors.IncorrectPasswordError": "ウォレットパスワードが間違っています。",
+  "api.errors.IncorrectPasswordError": "ウォレットパスワードが間違っています",
   "api.errors.NotEnoughFundsForTransactionError": "ADAが不足しています。送金額を減らしてください。",
   "api.errors.NotEnoughFundsForTransactionFeesError": "手数料分のADAが不足しています。送金額を減らしてください。",
   "api.errors.NotEnoughMoneyToSendError": "このトランザクションに必要な資金が不足しています。",
@@ -60,8 +60,8 @@
   "daedalus.diagnostics.dialog.lastNetworkBlock": "最新のネットワークブロック",
   "daedalus.diagnostics.dialog.lastSynchronizedBlock": "最新の同期済みブロック",
   "daedalus.diagnostics.dialog.localTimeDifference": "時差",
-  "daedalus.diagnostics.dialog.localTimeDifferenceCheckTime": "時刻の確認",
-  "daedalus.diagnostics.dialog.localTimeDifferenceChecking": "確認中…",
+  "daedalus.diagnostics.dialog.localTimeDifferenceCheckTime": "時刻を確認する",
+  "daedalus.diagnostics.dialog.localTimeDifferenceChecking": "確認しています…",
   "daedalus.diagnostics.dialog.message": "メッセージ",
   "daedalus.diagnostics.dialog.nodeHasBeenUpdated": "更新済み",
   "daedalus.diagnostics.dialog.nodeHasCrashed": "クラッシュ",
@@ -110,7 +110,7 @@
   "global.duration.months": "月",
   "global.duration.seconds": "秒",
   "global.duration.years": "年",
-  "global.errors.fieldIsRequired": "このフィールドは必須です。",
+  "global.errors.fieldIsRequired": "必須フィールドです",
   "global.errors.incompleteMnemonic": "{expected}語を入力して下さい。",
   "global.errors.invalidEmail": "入力されたメールアドレスは無効です。確認してください。",
   "global.errors.invalidMnemonic": "入力されたフレーズは無効です。確認してください。",
@@ -127,7 +127,7 @@
   "global.labels.filter": "フィルター",
   "global.labels.remove": "削除",
   "global.labels.reset": "リセット",
-  "global.labels.save": "保存",
+  "global.labels.save": "保存する",
   "global.language.chinese": "中国語",
   "global.language.croatian": "クロアチア語",
   "global.language.english": "英語 / English",
@@ -145,10 +145,10 @@
   "inline.editing.input.cancel.label": "キャンセル",
   "inline.editing.input.change.label": "変更",
   "inline.editing.input.changesSaved": "変更は保存されました",
-  "loading.screen.connectingToNetworkMessage": "ネットワークに接続中",
+  "loading.screen.connectingToNetworkMessage": "ネットワークに接続しています",
   "loading.screen.crashedCardanoMessage": "Cardanoノードはクラッシュしました",
   "loading.screen.errors.tlsCertificateNotValidPleaseRestartError": "設定の不具合が検知され修正されました。続けるにはDaedalusを再起動してください。",
-  "loading.screen.loadingWalletData": "ウォレットデータロード中",
+  "loading.screen.loadingWalletData": "ウォレットデータをロードしています",
   "loading.screen.readArticle.buttonLabel": "記事を読む",
   "loading.screen.readIssueArticle.connectivityIssueArticleUrl": "https://iohk.zendesk.com/hc/ja/articles/360010522913",
   "loading.screen.reconnectingToNetworkMessage": "接続失敗 - 再接続中",
@@ -214,7 +214,7 @@
   "paper.wallet.create.certificate.securingPassword.dialog.infoLabel1": "証明書を完成させるためには、ペーパーウォレット復元フレーズの残り{paperWalletWrittenWordsCount}語を証明書に書き込んでください。",
   "paper.wallet.create.certificate.securingPassword.dialog.infoLabel2": "残りのフレーズは証明書のここに書き込むことができます。",
   "paper.wallet.create.certificate.securingPassword.dialog.securingPasswordConfirmation": "はい、残り{paperWalletWrittenWordsCount}語を証明書に書き込みました。",
-  "paper.wallet.create.certificate.verification.dialog.button.clearLabel": "取消し",
+  "paper.wallet.create.certificate.verification.dialog.button.clearLabel": "取り消す",
   "paper.wallet.create.certificate.verification.dialog.headline": "証明書を検証する",
   "paper.wallet.create.certificate.verification.dialog.instructions": "{fullPhraseWordCount}語のペーパーウォレット復元フレーズをすべて入力してください。まず証明書に印刷されている{printedWordCount}語、次に自分で書き留めた{writtenWordCount}語を入力します。",
   "paper.wallet.create.certificate.verification.dialog.recoveringUnderstandanceConfirmationLabel": "ウォレットを復元する唯一の方法がペーパーウォレット証明書を利用することであることを理解しました。",
@@ -464,7 +464,7 @@
   "test.environment.developmentLabel": "開発",
   "test.environment.itnRewardsV1Label": "Incentivized Testnet v1 - Rewards",
   "test.environment.itnSelfnodeLabel": "ITN Selfnode",
-  "test.environment.mainnetLabel": "メインネットめ",
+  "test.environment.mainnetLabel": "メインネット",
   "test.environment.nightlyLabel": "Nightly",
   "test.environment.qaLabel": "QA",
   "test.environment.selfnodeLabel": "Selfnode",
@@ -483,7 +483,7 @@
   "wallet.add.dialog.restore.withoutCertificate.description": "バックアップからウォレットを復元する",
   "wallet.add.dialog.restoreNotificationMessage": "現在ウォレットを復元しています。<br>完了するまで新しいウォレットの復元やインポートはできません。",
   "wallet.add.dialog.title.label": "ウォレット追加",
-  "wallet.amountInput.feesLabel": "+ {amount}の手数料",
+  "wallet.amountInput.feesLabel": "手数料 + {amount}",
   "wallet.backup.privacy.warning.dialog..button.labelContinue": "続ける",
   "wallet.backup.privacy.warning.dialog.checkbox.label.nobodyWatching": "この新ウォレットに保有されているADAは復元フレーズさえあれば誰でも使用することができるため、画面が誰にも見られていないことを確認しました。",
   "wallet.backup.privacy.warning.dialog.recoveryPhraseInstructions1": "次の画面に表示される{walletRecoveryPhraseWordCount}語の単語リストを紙に書き留め、安全な場所に保管してください。この単語リストは現在作成している報酬ウォレットの復元フレーズです。",
@@ -493,7 +493,7 @@
   "wallet.backup.recovery.phrase.dialog.title": "復元フレーズ",
   "wallet.backup.recovery.phrase.display.dialog.backup.instructions": "ここに示されている通り、{walletRecoveryPhraseWordCount}語のウォレット復元フレーズを必ず<strong>正しい順序で紙に書き留めてください。</strong>",
   "wallet.backup.recovery.phrase.display.dialog.button.label.iHaveWrittenItDown": "はい、ウォレットの復元フレーズを書き留めました",
-  "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.offline": "ウォレット復元フレーズを安全に保管する最もシンプルな方法はデジタルまたはオンラインに保存しないことであることを了解しました。暗号化データベース付きパスワードマネージャーなどオンラインサービスを使用する場合は、自己責任で適切に使用します。",
+  "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.offline": "ウォレット復元フレーズを安全に保管する最もシンプルな方法はデジタルまたはオンラインに保存しないことであることを理解しました。暗号化データベース付きパスワードマネージャーなどオンラインサービスを使用する場合は、自己責任で適切に使用します。",
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.recovery": "コンピューターが喪失、故障、盗難、作動不能などとなった場合、ウォレットは復元フレーズを使用することによってのみ復元することができることを理解しました。",
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.rewards": "<strong>インセンティブ付きテストネットで得た報酬ADAをCardanoメインネットで受け取る際、このウォレットの復元フレーズが必要であることを理解しました。</strong>",
   "wallet.backup.recovery.phrase.entry.dialog.verification.instructions": "書き留めた通りの正しい順に単語をクリックして、ウォレットの復元フレーズを検証してください。",
@@ -571,8 +571,8 @@
   "wallet.receive.pdf.networkLabel": "Cardanoネットワーク：",
   "wallet.receive.pdf.noteLabel": "メモ：",
   "wallet.receive.pdf.title": "Daedalus Cardano ADAアドレス",
-  "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "取消し",
-  "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "確認",
+  "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "取り消す",
+  "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "確認する",
   "wallet.restore.dialog.configurationStep": "設定",
   "wallet.restore.dialog.confirmation.button.cancelButtonLabel": "ウォレット復元に戻る",
   "wallet.restore.dialog.confirmation.button.confirmButtonLabel": "画面を閉じる",
@@ -671,7 +671,7 @@
   "wallet.send.confirmationDialog.passphraseFieldPlaceholder": "送金時パスワードを入力して下さい",
   "wallet.send.confirmationDialog.passphraseLabel": "送金時パスワード",
   "wallet.send.confirmationDialog.passwordError": "送金時パスワードが間違っています",
-  "wallet.send.confirmationDialog.submit": "送金",
+  "wallet.send.confirmationDialog.submit": "送金する",
   "wallet.send.confirmationDialog.title": "トランザクションの確認",
   "wallet.send.confirmationDialog.totalLabel": "合計",
   "wallet.send.form.amount.label": "金額",
@@ -681,7 +681,7 @@
   "wallet.send.form.errors.invalidTitle": "タイトルを3字以上で入力してください。",
   "wallet.send.form.next": "続ける",
   "wallet.send.form.receiver.hint": "ウォレットアドレス",
-  "wallet.send.form.receiver.label": "受取人",
+  "wallet.send.form.receiver.label": "送金先",
   "wallet.send.form.syncingTransactionsMessage": "ウォレットの残高とトランザクション履歴は現在ブロックチェーンと同期中です。",
   "wallet.send.form.title.hint": "例：太郎用資金",
   "wallet.send.form.title.label": "タイトル",
@@ -766,7 +766,7 @@
   "wallet.statusMessages.activeRestore": "ウォレットの残高とトランザクション履歴はブロックチェーンと{percentage}%同期されました。",
   "wallet.summary.no.transactions": "最近のトランザクションはありません",
   "wallet.summary.page.pendingTransactionsLabel": "処理中のトランザクション数",
-  "wallet.summary.page.showMoreTransactionsButtonLabel": "もっと見る",
+  "wallet.summary.page.showMoreTransactionsButtonLabel": "もっと表示",
   "wallet.summary.page.syncingTransactionsMessage": "ウォレットのトランザクション履歴は現在ブロックチェーンと同期中です。",
   "wallet.summary.page.todayLabel": "今日",
   "wallet.summary.page.transactionsLabel": "トランザクション数",
