--- a/source/main/locales/en-US.json
+++ b/source/main/locales/en-US.json
@@ -29,7 +29,7 @@
   "menu.helpSupport.downloadLogs": "Download Logs",
   "menu.helpSupport.knownIssues": "Known Issues ↗",
   "menu.helpSupport.knownIssuesUrl": "https://daedaluswallet.io/known-issues/",
-  "menu.helpSupport.nonBlankScreenFixDialogMessage": "Turn on 'Blank screen fix'? \n \nIf the Daedalus user interface is failing to load then enabling this setting may fix the problem. It will reduce the performance of user interface rendering by disabling graphics acceleration, but some users may find that Daedalus runs better with this setting enabled. \n \nEnable this setting only if the Daedalus user interface is failing to load. If Daedalus is working properly, please click ‘No’. Otherwise, click ‘Yes’ to restart Daedalus with the blank screen fix setting enabled. \n \nDo you want to enable this setting and restart Daedalus?",
+  "menu.helpSupport.nonBlankScreenFixDialogMessage": "Turn on 'Blank screen fix'? \n \nIf the Daedalus user interface is failing to load then enabling this setting may fix the problem. It will reduce the performance of user interface rendering by disabling graphics acceleration, but some users may find that Daedalus runs better with this setting enabled. \n \nEnable this setting only if the Daedalus user interface is failing to load. If Daedalus is working properly, please click ‘Cancel’. Otherwise, click ‘Yes’ to restart Daedalus with the blank screen fix setting enabled. \n \nDo you want to enable this setting and restart Daedalus?",
   "menu.helpSupport.nonBlankScreenFixDialogTitle": "Turn on 'Blank screen fix'?",
   "menu.helpSupport.featureRequest": "Feature Requests ↗",
   "menu.helpSupport.featureRequestUrl": "https://iohk.zendesk.com/hc/en-us/sections/360002144373",
