--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -745,6 +745,7 @@
   "wallet.settings.recoveryPhraseVerification.neverWarning": "We recommend that you verify your wallet recovery phrase.",
   "wallet.settings.recoveryPhraseVerification.paperWalletDescription": "If this wallet was restored from a paper wallet certificate, you cannot use this feature to verify your wallet recovery phrase. Paper wallet recovery phrase to regular wallet recovery phrase conversion will be available in Daedalus soon.",
   "wallet.settings.recoveryPhraseVerification.paperWalletTitle": "Paper wallet",
+  "wallet.settings.recoveryPhraseVerification.timeUntilWarningReplacement": "!!!ヶ月,か月",
   "wallet.settings.recoveryPhraseVerification.title": "Do you have your wallet recovery phrase?",
   "wallet.settings.resyncWallet.description": "If you are experiencing issues with your wallet, or think you have an incorrect balance or transaction history, you can delete the local data stored by Daedalus and resync with the blockchain.",
   "wallet.settings.resyncWallet.header": "Resync wallet with the blockchain",
