--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -515,6 +515,12 @@
   "wallet.create.dialog.title.itn": "報酬ウォレットを作成する",
   "wallet.create.dialog.validateStep": "!!!Validate",
   "wallet.create.dialog.walletNameHint": "ウォレット名を入力してください",
+  "wallet.hardware.hardwareWalletBegin": "!!!To begin, connect and unlock your <span>Hardware wallet Device</span>",
+  "wallet.hardware.hardwareWalletExport": "!!!Export <span>public key</span> on your device",
+  "wallet.hardware.hardwareWalletInstructions": "!!!Follow instructions to access your wallet",
+  "wallet.hardware.hardwareWalletLedgerBegin": "!!!To begin, connect and unlock your <span>Ledger Device</span>",
+  "wallet.hardware.hardwareWalletTitle": "!!!Hardware wallet",
+  "wallet.hardware.ledgerWalletTitle": "!!!Ledger wallet",
   "wallet.import.file.dialog.buttonLabel": "ウォレットをインポートする",
   "wallet.import.file.dialog.description": "<p>この機能により、Daedalusの旧バージョン、Daedalusステータスディレクトリー、またはsecret.keyファイルからウォレットをインポートすることができます。</p> <p>各ウォレットの復元フレーズを入力せずに素早くウォレットをインポートできるほか、復元フレーズを紛失したウォレットのインポートも可能です。</p> <p>復元フレーズを紛失したウォレットをインポートした場合は、インポート後に新規ウォレットを作成してすべての資金を旧ウォレットから移し、<strong>新しいウォレットの復元フレーズを安全な場所に保管してください。</strong></p>",
   "wallet.import.file.dialog.importFromLabel": "インポート元：",
