Shelley node integration WIP

--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -2086,17 +2086,31 @@
         }
       },
       {
-        "defaultMessage": "!!!Development vx",
-        "description": "Label for development with version.",
+        "defaultMessage": "!!!Shelley Friends & Family Testnet",
+        "description": "Label for ff with version.",
         "end": {
           "column": 3,
           "line": 27
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
+        "id": "test.environment.ffLabel",
+        "start": {
+          "column": 6,
+          "line": 23
+        }
+      },
+      {
+        "defaultMessage": "!!!Development vx",
+        "description": "Label for development with version.",
+        "end": {
+          "column": 3,
+          "line": 32
+        },
+        "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
         "id": "test.environment.developmentLabel",
         "start": {
           "column": 15,
-          "line": 23
+          "line": 28
         }
       },
       {
@@ -2104,13 +2118,13 @@
         "description": "Label for nightly with version.",
         "end": {
           "column": 3,
-          "line": 32
+          "line": 37
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
         "id": "test.environment.nightlyLabel",
         "start": {
           "column": 11,
-          "line": 28
+          "line": 33
         }
       },
       {
@@ -2118,13 +2132,13 @@
         "description": "Label for qa with version.",
         "end": {
           "column": 3,
-          "line": 37
+          "line": 42
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
         "id": "test.environment.qaLabel",
         "start": {
           "column": 6,
-          "line": 33
+          "line": 38
         }
       },
       {
@@ -2132,13 +2146,13 @@
         "description": "Label for selfnode with version.",
         "end": {
           "column": 3,
-          "line": 42
+          "line": 47
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
         "id": "test.environment.selfnodeLabel",
         "start": {
           "column": 12,
-          "line": 38
+          "line": 43
         }
       },
       {
@@ -2146,13 +2160,13 @@
         "description": "Label for ITN selfnode with version.",
         "end": {
           "column": 3,
-          "line": 47
+          "line": 52
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
         "id": "test.environment.itnSelfnodeLabel",
         "start": {
           "column": 16,
-          "line": 43
+          "line": 48
         }
       },
       {
@@ -2160,13 +2174,13 @@
         "description": "Label for ITN Rewards V1 with version.",
         "end": {
           "column": 3,
-          "line": 52
+          "line": 57
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
         "id": "test.environment.itnRewardsV1Label",
         "start": {
           "column": 18,
-          "line": 48
+          "line": 53
         }
       },
       {
@@ -2174,13 +2188,13 @@
         "description": "Label for Daedalus Flight with version.",
         "end": {
           "column": 3,
-          "line": 57
+          "line": 62
         },
         "file": "source/renderer/app/components/sidebar/SidebarCategoryNetworkInfo.js",
         "id": "test.environment.daedalusFlightLabel",
         "start": {
           "column": 10,
-          "line": 53
+          "line": 58
         }
       }
     ],
@@ -11468,17 +11482,31 @@
         }
       },
       {
-        "defaultMessage": "!!!Development vx",
-        "description": "Label for development with version.",
+        "defaultMessage": "!!!Shelley Friends & Family Testnet",
+        "description": "Label for ff with version.",
         "end": {
           "column": 3,
           "line": 22
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
+        "id": "test.environment.ffLabel",
+        "start": {
+          "column": 6,
+          "line": 18
+        }
+      },
+      {
+        "defaultMessage": "!!!Development vx",
+        "description": "Label for development with version.",
+        "end": {
+          "column": 3,
+          "line": 27
+        },
+        "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
         "id": "test.environment.developmentLabel",
         "start": {
           "column": 15,
-          "line": 18
+          "line": 23
         }
       },
       {
@@ -11486,13 +11514,13 @@
         "description": "Label for nightly with version.",
         "end": {
           "column": 3,
-          "line": 27
+          "line": 32
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
         "id": "test.environment.nightlyLabel",
         "start": {
           "column": 11,
-          "line": 23
+          "line": 28
         }
       },
       {
@@ -11500,13 +11528,13 @@
         "description": "Label for qa with version.",
         "end": {
           "column": 3,
-          "line": 32
+          "line": 37
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
         "id": "test.environment.qaLabel",
         "start": {
           "column": 6,
-          "line": 28
+          "line": 33
         }
       },
       {
@@ -11514,13 +11542,13 @@
         "description": "Label for selfnode with version.",
         "end": {
           "column": 3,
-          "line": 37
+          "line": 42
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
         "id": "test.environment.selfnodeLabel",
         "start": {
           "column": 12,
-          "line": 33
+          "line": 38
         }
       },
       {
@@ -11528,13 +11556,13 @@
         "description": "Label for ITN selfnode with version.",
         "end": {
           "column": 3,
-          "line": 42
+          "line": 47
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
         "id": "test.environment.itnSelfnodeLabel",
         "start": {
           "column": 16,
-          "line": 38
+          "line": 43
         }
       },
       {
@@ -11542,13 +11570,13 @@
         "description": "Label for ITN Rewards V1 with version.",
         "end": {
           "column": 3,
-          "line": 47
+          "line": 52
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
         "id": "test.environment.itnRewardsV1Label",
         "start": {
           "column": 18,
-          "line": 43
+          "line": 48
         }
       },
       {
@@ -11556,13 +11584,13 @@
         "description": "Label for Daedalus Flight with version.",
         "end": {
           "column": 3,
-          "line": 52
+          "line": 57
         },
         "file": "source/renderer/app/components/widgets/WalletTestEnvironmentLabel.js",
         "id": "test.environment.daedalusFlightLabel",
         "start": {
           "column": 10,
-          "line": 48
+          "line": 53
         }
       }
     ],
@@ -12283,17 +12311,31 @@
         }
       },
       {
-        "defaultMessage": "!!!Development",
-        "description": "\"development\" Cardano network",
+        "defaultMessage": "!!!Shelley Friends & Family Testnet",
+        "description": "\"Shelley Friends & Family Testnet\" Cardano network",
         "end": {
           "column": 3,
           "line": 197
         },
         "file": "source/renderer/app/i18n/global-messages.js",
+        "id": "environment.network.ff",
+        "start": {
+          "column": 14,
+          "line": 193
+        }
+      },
+      {
+        "defaultMessage": "!!!Development",
+        "description": "\"development\" Cardano network",
+        "end": {
+          "column": 3,
+          "line": 202
+        },
+        "file": "source/renderer/app/i18n/global-messages.js",
         "id": "environment.network.development",
         "start": {
           "column": 23,
-          "line": 193
+          "line": 198
         }
       },
       {
@@ -12301,13 +12343,13 @@
         "description": "\"itn_rewards_v1\" Cardano network",
         "end": {
           "column": 3,
-          "line": 202
+          "line": 207
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "environment.network.itn_rewards_v1",
         "start": {
           "column": 26,
-          "line": 198
+          "line": 203
         }
       },
       {
@@ -12315,13 +12357,13 @@
         "description": "\"itn_selfnode\" Cardano network",
         "end": {
           "column": 3,
-          "line": 207
+          "line": 212
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "environment.network.itn_selfnode",
         "start": {
           "column": 24,
-          "line": 203
+          "line": 208
         }
       },
       {
@@ -12329,13 +12371,13 @@
         "description": "\"selfnode\" Cardano network",
         "end": {
           "column": 3,
-          "line": 212
+          "line": 217
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "environment.network.selfnode",
         "start": {
           "column": 20,
-          "line": 208
+          "line": 213
         }
       },
       {
@@ -12343,13 +12385,13 @@
         "description": "\"qa\" Cardano network",
         "end": {
           "column": 3,
-          "line": 217
+          "line": 222
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "environment.network.qa",
         "start": {
           "column": 14,
-          "line": 213
+          "line": 218
         }
       },
       {
@@ -12357,13 +12399,13 @@
         "description": "\"nightly\" Cardano network",
         "end": {
           "column": 3,
-          "line": 222
+          "line": 227
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "environment.network.nightly",
         "start": {
           "column": 19,
-          "line": 218
+          "line": 223
         }
       },
       {
@@ -12371,13 +12413,13 @@
         "description": "Label for years value in duration.",
         "end": {
           "column": 3,
-          "line": 227
+          "line": 232
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.duration.years",
         "start": {
           "column": 9,
-          "line": 223
+          "line": 228
         }
       },
       {
@@ -12385,13 +12427,13 @@
         "description": "Label for months value in duration.",
         "end": {
           "column": 3,
-          "line": 232
+          "line": 237
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.duration.months",
         "start": {
           "column": 10,
-          "line": 228
+          "line": 233
         }
       },
       {
@@ -12399,13 +12441,13 @@
         "description": "Label for days value in duration.",
         "end": {
           "column": 3,
-          "line": 237
+          "line": 242
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.duration.days",
         "start": {
           "column": 8,
-          "line": 233
+          "line": 238
         }
       },
       {
@@ -12413,13 +12455,13 @@
         "description": "Label for hours value in duration.",
         "end": {
           "column": 3,
-          "line": 242
+          "line": 247
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.duration.hours",
         "start": {
           "column": 9,
-          "line": 238
+          "line": 243
         }
       },
       {
@@ -12427,13 +12469,13 @@
         "description": "Label for minutes value in duration.",
         "end": {
           "column": 3,
-          "line": 247
+          "line": 252
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.duration.minutes",
         "start": {
           "column": 11,
-          "line": 243
+          "line": 248
         }
       },
       {
@@ -12441,13 +12483,13 @@
         "description": "Label for seconds value in duration.",
         "end": {
           "column": 3,
-          "line": 252
+          "line": 257
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.duration.seconds",
         "start": {
           "column": 11,
-          "line": 248
+          "line": 253
         }
       },
       {
@@ -12455,13 +12497,13 @@
         "description": "From label of range.",
         "end": {
           "column": 3,
-          "line": 257
+          "line": 262
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.range.from",
         "start": {
           "column": 13,
-          "line": 253
+          "line": 258
         }
       },
       {
@@ -12469,13 +12511,13 @@
         "description": "To label of range.",
         "end": {
           "column": 3,
-          "line": 262
+          "line": 267
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.range.to",
         "start": {
           "column": 11,
-          "line": 258
+          "line": 263
         }
       },
       {
@@ -12483,13 +12525,13 @@
         "description": "Filter label.",
         "end": {
           "column": 3,
-          "line": 267
+          "line": 272
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.labels.filter",
         "start": {
           "column": 10,
-          "line": 263
+          "line": 268
         }
       },
       {
@@ -12497,13 +12539,13 @@
         "description": "All label.",
         "end": {
           "column": 3,
-          "line": 272
+          "line": 277
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.labels.all",
         "start": {
           "column": 7,
-          "line": 268
+          "line": 273
         }
       },
       {
@@ -12511,13 +12553,13 @@
         "description": "Reset label.",
         "end": {
           "column": 3,
-          "line": 277
+          "line": 282
         },
         "file": "source/renderer/app/i18n/global-messages.js",
         "id": "global.labels.reset",
         "start": {
           "column": 9,
-          "line": 273
+          "line": 278
         }
       }
     ],
