--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -92,6 +92,7 @@
   "environment.apiName.cardano": "Cardano",
   "environment.currency.ada": "ADA",
   "environment.network.development": "開発",
+  "environment.network.ff": "!!!Shelley Friends & Family Testnet",
   "environment.network.itn_rewards_v1": "Incentivized Testnet v1 - Rewards",
   "environment.network.itn_selfnode": "ITN Selfnode",
   "environment.network.mainnet": "メインネット",
@@ -462,6 +463,7 @@
   "systemTime.error.supportPortalLinkUrl": "https://daedaluswallet.io/ja/clock-sync/",
   "test.environment.daedalusFlightLabel": "Cardano Mainnet - Daedalus Flight",
   "test.environment.developmentLabel": "開発",
+  "test.environment.ffLabel": "!!!Shelley Friends & Family Testnet",
   "test.environment.itnRewardsV1Label": "Incentivized Testnet v1 - Rewards",
   "test.environment.itnSelfnodeLabel": "ITN Selfnode",
   "test.environment.mainnetLabel": "メインネット",
