--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -92,6 +92,7 @@
   "environment.apiName.cardano": "Cardano",
   "environment.currency.ada": "Ada",
   "environment.network.development": "Development",
+  "environment.network.ff": "Shelley Friends & Family Testnet",
   "environment.network.itn_rewards_v1": "Incentivized Testnet v1 - Rewards",
   "environment.network.itn_selfnode": "ITN Selfnode",
   "environment.network.mainnet": "Mainnet",
@@ -462,6 +463,7 @@
   "systemTime.error.supportPortalLinkUrl": "https://daedaluswallet.io/clock-sync/",
   "test.environment.daedalusFlightLabel": "Cardano mainnet - Daedalus Flight",
   "test.environment.developmentLabel": "Development",
+  "test.environment.ffLabel": "Shelley Friends & Family Testnet",
   "test.environment.itnRewardsV1Label": "Incentivized Testnet v1 - Rewards",
   "test.environment.itnSelfnodeLabel": "ITN Selfnode",
   "test.environment.mainnetLabel": "Mainnet",
